[package]
name = "psp-types"
version = "0.1.0"
license = "Apache-2.0"
description = "Types for interaction with plugin server protocol"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
lsp-types = { version = "0.93", features = ["proposed"] }
